Created Find page

--- a/friends.html
+++ b/friends.html
@@ -23,7 +23,7 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends></h1>
+        <h1 class="screen-header__title">Friends</h1>
         <div class="screen-header__icons">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
             <span><i class="fa-solid fa-music fa-lg"></i></span>
@@ -36,23 +36,48 @@
         <i class="fa-solid fa-circle-info fa-lg"></i> Friend's Names Display <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
 
-    <div class="user-component">
-        <div class="user-component__column">
-            <img class="#" />
-            <div class="user-component__text">
-                <h4 class="user-component__title">MY</h4>
+    <main class="firends-screen">   
+        <div class="user-component">
+            <div class="user-component__column">
+                <img class="user-component__avatar user-component__avatar--xl" src="https://huggingface.co/datasets/huggingfacejs/tasks/resolve/main/image-classification/image-classification-input.jpeg" />
+                <div class="user-component__text">
+                    <h4 class="user-component__title">MY</h4>
+                    <!--<h6 class="user-component__subtitle">blah blah blah</h6>-->
+                </div>
+            </div>
+            <div class="user-component__column"></div>
+        </div>
+        <div class="firends-screen__channel">
+            <div class="firends-screen__channel-header">
+                <span>Channel</span>
+                <i class="fa-solid fa-chevron-up fa-xs"></i>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img class="user-component__avatar user-component__avatar--sm" src="https://play-lh.googleusercontent.com/cf3DwPLbS8Z55sDvUSTQ6PL1goPdm8KbZ81g4TEUAaeUh5LDhkzdjxKQ2RX6BGpv0x4" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <div>
+                        <span>2</span>
+                        <i class="fa-solid fa-chevron-right fa-xs"></i>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="user-component__column"></div>
-    </div>
+
+    </main> 
+
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
+            <li class="nav__btn"><afriends.html class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
             <li class="nav__btn">
-                <a class="nav__link" href="#"><span class="nav__notification">1</span><i class="fa-regular fa-comment fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
+                <a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="fa-regular fa-comment fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
         </ul>
     </nav>
 
