--- a/find.html
+++ b/find.html
@@ -32,20 +32,20 @@
     </header>
 
     <main class="main-screen">
-        <div class="find-icons">
-            <div class="find-icons__icon">
+        <div class="icon-row">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-qrcode"></i>
                 <span>QR Code</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-regular fa-address-book"></i>
                 <span>Add by Contacts</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-passport"></i>
                 <span>Add by ID</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-regular fa-envelope"></i>
                 <span>Invite</span>
             </div>
@@ -60,20 +60,29 @@
                 <span>Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i></span>
             </div>
             <div class="open-post">
+
                 <div class="open-post__column">
                     <h5 class="open-chat__title">#BTS</h5>
                     <h6 class="open-chat__hashtags">#bts#army#friends</h6>
                     <div class="open-post__members">
-                        <img src="https://img0.yna.co.kr/etc/inner/KR/2021/06/19/AKR20210619028500005_01_i_P2.jpg" />
+                        <img src="https://huggingface.co/datasets/huggingfacejs/tasks/resolve/main/image-classification/image-classification-input.jpeg" />
                         <span class="open-post__member-count">802 members</span> 
                         <div class="divider"></div>
                         <span class="open-post__member-status">Active</span>
 
-
                     </div>
 
                 </div>
-                <div class="open-post__column"></div>
+                <div class="open-post__column">
+                    <div class="open-post__photo">
+                        <img src="https://img0.yna.co.kr/etc/inner/KR/2021/06/19/AKR20210619028500005_01_i_P2.jpg" />
+                        <div class="open-post__heart-count">
+                            <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
         </div>
     </main> 
