--- a/find.html
+++ b/find.html
@@ -97,7 +97,9 @@
             <li class="nav__btn"><a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a></li>
         </ul>
     </nav>
-
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script src="https://kit.fontawesome.com/aaf457af4f.js" crossorigin="anonymous"></script>
 </body>
 </html>
