--- a/friends.html
+++ b/friends.html
@@ -83,7 +83,9 @@
     <div id="splash-screen">
         <i class="fa-solid fa-comment"></i>
     </div>
-
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/aaf457af4f.js" crossorigin="anonymous"></script>
 </body>
