--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 
     <form action="friends.html" method="get" id="login-form">
         <input name="username" type="text" placeholder="Email or phone number" />
-        <input name="password" placeholder="password" />
+        <input name="password" type="password" placeholder="password" />
         <input type="submit" value="Log In" />
         <a href="#" >Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/aaf457af4f.js" crossorigin="anonymous"></script>
 </body>
