--- a/chat.html
+++ b/chat.html
@@ -87,7 +87,9 @@
 
 
     </form>
-
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script src="https://kit.fontawesome.com/aaf457af4f.js" crossorigin="anonymous"></script>
 </body>
 </html>
