--- a/chats.html
+++ b/chats.html
@@ -63,7 +63,9 @@
         </ul>
     </nav>
 
-
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script src="https://kit.fontawesome.com/aaf457af4f.js" crossorigin="anonymous"></script>
 </body>
 </html>
