--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <a href="#" >Find Kokoa Account or Password</a>
     </form>
 
-
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script src="https://kit.fontawesome.com/aaf457af4f.js" crossorigin="anonymous"></script>
 </body>
 </html>
